# tlvjsonc

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
example/simple_server_client/: .gitignore  CMakeLists.txt  client.c  server.c
include/tlv/: tlv.h  tlvclient.h  tlvevent.h  tlvserver.h  uthash.h
include/tlvjson/: tlvjclient.h  tlvjserver.h  tlvjson.h
include/tlvlib/: tlv.h  tlvclient.h
src/: CMakeLists.txt  log.c  tlv.c  tlvclient.c  tlvevent.c  tlvjclient.c  tlvjserver.c  tlvjson.c  tlvserver.c
tests/: CMakeLists.txt  tlvevent_tlvhandlerhash_test.c  uthash_test.c
